--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,6 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background-color: green;
+  font-family: "Times New Roman", Times, serif;
+}
